# greenpulse-backend

./: .env.example  .gitignore  .replit  README.md  SERVICE_ACCOUNT_SETUP.md  SETUP_GUIDE.md  app.py  auth.py  pyproject.toml  replit.md  requirements.txt
config/: settings.py
examples/: api_examples.md
routes/: .field_routes.py.swp  __init__.py  field_routes.py
services/: __init__.py  ai_assistant_service.py  earth_engine_service.py  report_service.py
